@startuml
'https://plantuml.com/class-diagram
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR
skinparam classBackgroundColor LOGIC_COLOR


package Recommender {
    class Recommender
    class TimingRecommender
    class LocationRecommender
}

Recommender --> LocationRecommender
Recommender --> TimingRecommender


@enduml
